# app/Http/Controllers/User/WalletController.php
@@ -605,4 +605,29 @@ class WalletController extends BaseController
 
         return $this->successfulResponse($account,'Account generated successfully');
     }
+
+    /**
+     * @OA\Get(
+     ** path="/api/v1/merchant/get-merchant-wallet",
+     *   tags={"Merchant"},
+     *   summary="Get merchant wallet balance",
+     *   operationId="get merchant  wallet balance",
+     *
+     *
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success",
+     *     ),
+     *     security={
+     *       {"api_key": {}}
+     *     }
+     *
+     *)
+     **/
+    public function getMerchantWallet()
+    {
+        // $user = User::find(1);
+        // return(Auth::user());
+        return $this->successfulResponse(Auth::user()->wallet, '');
+    }
 }
